refacto(*): changing the file endpoint to be more semantic
