# swagger_output.json
@@ -293,24 +293,11 @@
         }
       }
     },
-    "/": {
-      "get": {
-        "tags": [],
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          }
-        }
-      }
-    },
-    "/new-feedback": {
+    "/slack/new-feedback": {
       "post": {
-        "tags": [],
+        "tags": [
+          "Slack"
+        ],
         "description": "",
         "parameters": [
           {
@@ -330,6 +317,21 @@
           }
         ],
         "responses": {}
+      }
+    },
+    "/": {
+      "get": {
+        "tags": [],
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
       }
     }
   },
